--- a/src/style.css
+++ b/src/style.css
@@ -3,10 +3,23 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+body {
+  background-color: rgba(143, 143, 143, 0.281);
+}
 .App {
   padding: 20px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
 }
 
 button {
-  margin-top: 10px;
+  margin: 10px;
+  padding: 15px;
+  background: green;
+  border: 2px solid #000;
+  border-radius: 20px;
+  color: white;
 }
